// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ClusterListFilter /> renders correctly 1`] = `
<ClusterListFilter
  currentFilter=""
  setFilter={[MockFunction]}
>
  <TextInput
    aria-label="Filter"
    className="cluster-list-filter"
    data-testid="filterInputClusterList"
    onChange={[Function]}
    placeholder="Filter by name or ID..."
    type="text"
    value=""
  >
    <TextInputBase
      aria-label="Filter"
      className="cluster-list-filter"
      data-testid="filterInputClusterList"
      innerRef={null}
      isDisabled={false}
      isExpanded={false}
      isLeftTruncated={false}
      isRequired={false}
      isStartTruncated={false}
      onChange={[Function]}
      ouiaSafe={true}
      placeholder="Filter by name or ID..."
      type="text"
      validated="default"
      value=""
    >
      <span
        className="pf-v5-c-form-control cluster-list-filter"
      >
        <input
          aria-invalid={false}
          aria-label="Filter"
          data-ouia-component-id="OUIA-Generated-TextInputBase-1"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe={true}
          data-testid="filterInputClusterList"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Filter by name or ID..."
          required={false}
          type="text"
          value=""
        />
      </span>
    </TextInputBase>
  </TextInput>
</ClusterListFilter>
`;

exports[`<ClusterListFilter /> renders correctly 2`] = `
<ClusterListFilter
  currentFilter="hello"
  setFilter={[MockFunction]}
>
  <TextInput
    aria-label="Filter"
    className="cluster-list-filter"
    data-testid="filterInputClusterList"
    onChange={[Function]}
    placeholder="Filter by name or ID..."
    type="text"
    value="hello"
  >
    <TextInputBase
      aria-label="Filter"
      className="cluster-list-filter"
      data-testid="filterInputClusterList"
      innerRef={null}
      isDisabled={false}
      isExpanded={false}
      isLeftTruncated={false}
      isRequired={false}
      isStartTruncated={false}
      onChange={[Function]}
      ouiaSafe={true}
      placeholder="Filter by name or ID..."
      type="text"
      validated="default"
      value="hello"
    >
      <span
        className="pf-v5-c-form-control cluster-list-filter"
      >
        <input
          aria-invalid={false}
          aria-label="Filter"
          data-ouia-component-id="OUIA-Generated-TextInputBase-2"
          data-ouia-component-type="PF5/TextInput"
          data-ouia-safe={true}
          data-testid="filterInputClusterList"
          disabled={false}
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          placeholder="Filter by name or ID..."
          required={false}
          type="text"
          value="hello"
        />
      </span>
    </TextInputBase>
  </TextInput>
</ClusterListFilter>
`;
